ASUSFETest/src/objects/Institution__c.object
<CustomObject>
    <description>Listing of all external orgs</description>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <label>CEEB Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Org_ID__c</fullName>
        <description>Unique PeopleSoft identifier</description>
        <externalId>true</externalId>
        <label>External Org ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FICE_Code__c</fullName>
        <label>FICE Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Institution_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active/Inactive state</description>
        <label>Institution Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>2YR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4YR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Zip_Code__c</fullName>
        <label>Institution Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Institution</label>
    <nameField>
        <label>Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>